[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/mirror_block.png" type="Texture" id=1]
[ext_resource path="res://objects/MirrorBlock.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.5, 9 )

[node name="MirrorBlock" type="Sprite" groups=["grid_object", "mirror_blocks"]]
texture = ExtResource( 1 )
offset = Vector2( 1, -5 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )
script = ExtResource( 2 )

[node name="ClickArea" type="Area2D" parent="."]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2( 0.5, -1 )
shape = SubResource( 1 )

[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
